--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
   <div id="pageintro" class="hoc clear">
     <article>
-      <p>Aenean sagittis tincidunt</p>
+      <p class="heading">Aenean sagittis tincidunt</p>
       <h3 class="heading">Posuere morbi scelerisque</h3>
       <footer>
         <ul class="nospace inline pushright">
@@ -220,7 +220,7 @@
     <div class="group latest">
       <article class="one_third first">
         <a class="imgover btmspace-30" href="#">
-          <img src="images/placeholder_replace/1.jpg" alt="">
+          <img class="align" src="images/placeholder_replace/1.jpg" alt="">
         </a>
         <ul class="nospace meta">
           <li><i class="fa fa-user"></i> <a href="#">Admin</a></li>
@@ -234,7 +234,7 @@
       </article>
       <article class="one_third">
         <a class="imgover btmspace-30" href="#">
-          <img src="images/placeholder_replace/1.jpg" alt="">
+          <img class="align" src="images/placeholder_replace/1.jpg" alt="">
         </a>
         <ul class="nospace meta">
           <li><i class="fa fa-user"></i> <a href="#">Admin</a></li>
