--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
-<div class="bgded overlay light" style="background-image:url('images/demo/backgrounds/01.jpg');">
+<div class="bgded overlay light" style="background-image: url('images/demo/backgrounds/01.jpg');">
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear">
       <ul class="nospace">
@@ -69,7 +69,7 @@
     </article>
   </div>
 </div>
-<div class="wrapper row3">
+<div class=" wrapper row3" >
   <main class="hoc container clear">
     <div class="sectiontitle">
       <h6 class="heading">Praesent ex malesuada</h6>
@@ -326,6 +326,6 @@
     <p class="fl_right">Template by <a target="_blank" href="https://www.ta-cru-jallai-oublier-ou-koi.com/" title="Free Website Templates">Best templates</a></p>
   </div>
 </div>
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+<a id="backtotop" href="#top"><img src="images/demo/arrow.svg" alt=""><i class="fa fa-chevron-up"></i></a>
 </body>
 </html>
