--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Partiel Web 1</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<meta name="width" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
