--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a class="drop" href="#">Pages
+          <li>
             <ul>
+            <a class="drop" href="#">Pages
+
               </a>
               <li><a href="pages/gallery.html">Gallery</a></li>
               <li><a href="pages/full-width.html">Full Width</a></li>
